# livekit-speech

./: .env  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  start.sh  tailwind.config.ts  tsconfig.json  vite.config.ts
api/: main.py
asr-worker/: verify_model.py
backend/: .gitignore  FINAL_STATUS.md  INSTALLATION_SUMMARY.md  SETUP_STATUS.md  download_model.py  fix_livekit_dll.py  main.py  requirements.txt  run_all_checks.py  verify_packages.py
client/src/: index.css
client/src/components/: AudioVisualizer.tsx  RecordButton.tsx  SessionTimer.tsx  ThemeToggle.tsx
client/src/hooks/: useLiveKit.ts
client/src/pages/: Home.tsx
docs/: ARCHITECTURE.md  AZURE_DEPLOYMENT.md  DIAGRAMS.md  FINAL_STATUS.md  GIT_BEST_PRACTICES.md  IOS_COMPATIBILITY.md  MODELS_REQUIREMENTS.md  PERFORMANCE.md  README.md  SERVER_CONFIGURATION.md  SERVER_GUIDE_COMPLETE.md  SYSTEM_DOCUMENTATION.md  VISUAL_GUIDE.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioVisualizer.tsx  LanguageSelector.tsx  NeuralBackground.tsx  RecordButton.tsx  StatusIndicator.tsx  SystemCheckModal.tsx  TranscriptDisplay.tsx  VantaBackground.tsx
frontend/src/hooks/: useLiveKit.ts  useLiveKitAgent.ts  useWebSocketOnly.ts
frontend/src/pages/: Home.tsx  LiveKitTestMode.tsx  PracticeMode.tsx  TestMode.tsx  WebSocketMode.tsx
server/: index.ts  routes.ts
shared/: schema.ts
(+3 files in other folders)
